// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image > Default > should render correctly 1`] = `
<DocumentFragment>
  <img
    alt="Image"
    class="sc-bczSft kbIDUj"
    src="./__tests__/test-image.svg"
  />
</DocumentFragment>
`;

exports[`Image Default should render correctly 1`] = `
<DocumentFragment>
  <img
    alt="Image"
    class="sc-bcXHqe cnzqin"
    src="./__tests__/test-image.svg"
  />
</DocumentFragment>
`;
